infrastructure/subsystems/networking-extra/unifi/mongodb-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-db
  namespace: unifi
  labels:
    app.kubernetes.io/name: unifi-db
    app.kubernetes.io/part-of: unifi
    app.kubernetes.io/component: database
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: unifi-db
      app.kubernetes.io/part-of: unifi
      app.kubernetes.io/component: database
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unifi-db
        app.kubernetes.io/part-of: unifi
        app.kubernetes.io/component: database
    spec:
      automountServiceAccountToken: false
      containers:
      - name: unifi-db
        image: docker.io/mongo:7.0.32@sha256:8d727b31455fbedbc5600fe8c903aed89d0c7a7c2273a3a41bd054c1ee7baf31
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command: [/usr/bin/mongosh, --port, '27017', --eval, "db.adminCommand({'shutdown': 1})"]
        livenessProbe:
          exec:
            command: [/usr/bin/mongosh, --port, '27017', --eval, "db.adminCommand('ping')"]
          periodSeconds: 60
        ports:
        - name: mongodb
          containerPort: 27017
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 27017
          periodSeconds: 60
        startupProbe:
          exec:
            command: [/usr/bin/mongosh, --port, '27017', --eval, "db.adminCommand('ping')"]
          failureThreshold: 24
          initialDelaySeconds: 10
          periodSeconds: 5
        volumeMounts:
        - name: mongo-data-volume
          mountPath: /data/db
        - name: init-scripts-volume
          mountPath: /docker-entrypoint-initdb.d/init-mongo.js
          readOnly: true
          subPath: init-mongo.js
      volumes:
      - name: mongo-data-volume
        persistentVolumeClaim:
          claimName: unifi-db-data
      - name: script-templates-volume
        configMap:
          name: unifi-db-script-template
      - name: init-scripts-volume
        emptyDir:
          medium: Memory
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - "amd64"
