infrastructure/subsystems/networking-extra/unifi/unifi-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-network-application
  namespace: unifi
  labels:
    app.kubernetes.io/name: unifi-network-application
    app.kubernetes.io/part-of: unifi
    app.kubernetes.io/component: application
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: unifi-network-application
      app.kubernetes.io/part-of: unifi
      app.kubernetes.io/component: application
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unifi-network-application
        app.kubernetes.io/part-of: unifi
        app.kubernetes.io/component: application
    spec:
      automountServiceAccountToken: false
      containers:
      - name: unifi
        image: ghcr.io/linuxserver/unifi-network-application:10.1.85@sha256:05e8e7e5003263adc0e714c32ae5f9543279f324e54ff8750c4550924b25c79c
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /status
            port: https-gui-api
            scheme: HTTPS
          periodSeconds: 15
        ports:
        - name: dns-tcp
          containerPort: 53
          protocol: TCP
        - name: dns-udp
          containerPort: 53
          protocol: UDP
        - name: ntp
          containerPort: 123
          protocol: UDP
        # used to "Make application discoverable on L2 network" in the UniFi Network settings
        - name: l2-discovery
          containerPort: 1900
          protocol: UDP
        - name: stun
          containerPort: 3478
          protocol: UDP
        - name: remote-syslog
          containerPort: 5514
          protocol: UDP
        - name: speedtest
          containerPort: 6789
          protocol: TCP
        # unifi network devices communicate w/ unifi network controller (device adoption, etc) on this port
        - name: dvc-comms
          containerPort: 8080
          protocol: TCP
        # web ui + api
        - name: https-gui-api
          containerPort: 8443
          protocol: TCP
        # - name: captive-portal-https
        #   containerPort: 8843
        #   protocol: TCP
        # - name: captive-portal-http
        #   containerPort: 8880
        #   protocol: TCP
        - name: dvc-discovery
          containerPort: 10001
          protocol: UDP
        readinessProbe:
          httpGet:
            path: /status
            port: https-gui-api
            scheme: HTTPS
          periodSeconds: 15
        startupProbe:
          httpGet:
            path: /status
            port: https-gui-api
            scheme: HTTPS
          failureThreshold: 24
          initialDelaySeconds: 15
          periodSeconds: 5
        volumeMounts:
        - name: unifi-data
          mountPath: /config/data
        - name: unifi-logs
          mountPath: /config/logs
        - name: unifi-backups
          mountPath: /config/data/firmware
          subPath: firmware
        - name: unifi-backups
          mountPath: /config/data/backup
          subPath: backup
      volumes:
      - name: unifi-data
        persistentVolumeClaim:
          claimName: unifi-data
      - name: unifi-logs
        # unifi writes logs to multiple different log files:
        #     access.log   inform_request.log  server.log   state.log
        #     hotspot.log  migration.log       startup.log  tasks.lo
        # these are not written to stdout, so we are placing them on a separate pvc that
        # can be scraped by the log ingestor
        persistentVolumeClaim:
          claimName: unifi-logs
      - name: unifi-backups
        persistentVolumeClaim:
          claimName: unifi-backups
