infrastructure/subsystems/networking-extra/unifi/mongodb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-db
  namespace: unifi
  labels:
    app.kubernetes.io/name: unifi-db
    app.kubernetes.io/part-of: unifi
    app.kubernetes.io/component: database
spec:
  selector:
    app.kubernetes.io/name: unifi-db
    app.kubernetes.io/part-of: unifi
    app.kubernetes.io/component: database
  ports:
  - name: mongodb
    port: 27017
    targetPort: mongodb
    protocol: TCP
  type: ClusterIP
